# TGFramework

./: .gitmodules  README.md
NServer/: CMakeLists.txt
NServer/CommFuc/: CommLogic.h  ErrorHandle.h  comm_func.cpp  comm_func.h  count_time.hpp  define.h
NewServer/: .gitignore
NewServer/CommInterface/DbAccess/: DbAccess.tars  Makefile
NewServer/Common/CommFunc/: CommLogic.h  DumpHelper.h  ErrorHandle.h  OuterProxyFactory.h  define.h  makefile
NewServer/Common/CommJce/: makefile
NewServer/Common/MiniApr/: makefile
NewServer/Common/MiniApr/Include/: MiniApr.h  MiniAprType.h
NewServer/Common/MiniApr/Include/Component/: ComponentBase.h  IComponent.h
NewServer/Common/MiniApr/Include/EventServer/: Delegate.h  EventServer.h
NewServer/Common/MiniApr/Include/ProfileManager/: IProfilerManager.h  IProfilerStrategy.h  IProfilerTimer.h
NewServer/Common/MiniApr/Include/PropSet/: PropSet.h
NewServer/Common/MiniApr/Src/: MiniAprPch.h
NewServer/Common/Template/: HashMap.h  Singleton.h  hash_map_fixed.h
NewServer/Common/ToLua++/: tolua_is.c
NewServer/Common/lua5.1/: lauxlib.c  lauxlib.h  lbaselib.c
NewServer/Dal/DALComm/: DalCommDef.h  DalDbInterface.h  DbPool.h  makefile
NewServer/Dal/MO/: DalMoDef.h  makefile
NewServer/Make/: CommInclude.mk  CommLib.mk  makefile_lib
NewServer/RS/LoginServer/: Login.h  Login.tars  LoginImp.cpp  LoginImp.h  LoginServer.config.conf  LoginServer.cpp  LoginServer.h  Makefile
NewServer/redis-Server/: start.sh
NewServer/tmp/: server.config.conf.txt
doc/: Tars阅读记录.txt  tarscpp非tars协议使用说明.txt  websocket++相关记录.txt
(+17 files in other folders)
